--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "htw-stencil-helloworld",
   "version": "0.0.1",
   "description": "Stencil helloworld webcomponent for HTW students",
-  "module": "dist/esm/index.js",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "es2015": "dist/esm/index.mjs",
+  "es2017": "dist/esm/index.mjs",
+  "jsnext:main": "dist/esm/index.mjs",
   "types": "dist/types/components.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "files": [
@@ -17,7 +20,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "0.18.1"
+    "@stencil/core": "^1.0.0-beta.1"
   },
   "license": "MIT"
 }
